k8s/osdu/airflow/ingress-airflow-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress-external
  namespace: osdu-airflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - airflow-do-osdu.esstar.com.vn
      secretName: cf-origin-airflow-tls
  rules:
    - host: airflow-do-osdu.esstar.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
